; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_net.c_auth_match.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/esp_ble_mesh/mesh_core/extr_net.c_auth_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bt_mesh_subnet_keys = type { i32*, i32 }

@.str = private unnamed_addr constant [30 x i8] c"Authentication Value %s != %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bt_mesh_subnet_keys*, i32*, i32, i32, i32*)* @auth_match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @auth_match(%struct.bt_mesh_subnet_keys* %0, i32* %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.bt_mesh_subnet_keys*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca [8 x i32], align 16
  store %struct.bt_mesh_subnet_keys* %0, %struct.bt_mesh_subnet_keys** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = load %struct.bt_mesh_subnet_keys*, %struct.bt_mesh_subnet_keys** %7, align 8
  %15 = getelementptr inbounds %struct.bt_mesh_subnet_keys, %struct.bt_mesh_subnet_keys* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = call i64 @memcmp(i32* %13, i32* %16, i32 8)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %42

20:                                               ; preds = %5
  %21 = load %struct.bt_mesh_subnet_keys*, %struct.bt_mesh_subnet_keys** %7, align 8
  %22 = getelementptr inbounds %struct.bt_mesh_subnet_keys, %struct.bt_mesh_subnet_keys* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = load i32, i32* %9, align 4
  %25 = load %struct.bt_mesh_subnet_keys*, %struct.bt_mesh_subnet_keys** %7, align 8
  %26 = getelementptr inbounds %struct.bt_mesh_subnet_keys, %struct.bt_mesh_subnet_keys* %25, i32 0, i32 0
  %27 = load i32*, i32** %26, align 8
  %28 = load i32, i32* %10, align 4
  %29 = getelementptr inbounds [8 x i32], [8 x i32]* %12, i64 0, i64 0
  %30 = call i32 @bt_mesh_beacon_auth(i32 %23, i32 %24, i32* %27, i32 %28, i32* %29)
  %31 = load i32*, i32** %11, align 8
  %32 = getelementptr inbounds [8 x i32], [8 x i32]* %12, i64 0, i64 0
  %33 = call i64 @memcmp(i32* %31, i32* %32, i32 8)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %41

35:                                               ; preds = %20
  %36 = load i32*, i32** %11, align 8
  %37 = call i32 @bt_hex(i32* %36, i32 8)
  %38 = getelementptr inbounds [8 x i32], [8 x i32]* %12, i64 0, i64 0
  %39 = call i32 @bt_hex(i32* %38, i32 8)
  %40 = call i32 @BT_WARN(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %37, i32 %39)
  store i32 0, i32* %6, align 4
  br label %42

41:                                               ; preds = %20
  store i32 1, i32* %6, align 4
  br label %42

42:                                               ; preds = %41, %35, %19
  %43 = load i32, i32* %6, align 4
  ret i32 %43
}

declare dso_local i64 @memcmp(i32*, i32*, i32) #1

declare dso_local i32 @bt_mesh_beacon_auth(i32, i32, i32*, i32, i32*) #1

declare dso_local i32 @BT_WARN(i8*, i32, i32) #1

declare dso_local i32 @bt_hex(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
